Added swagger compatibility
